# dotfiles_v2

./: .gitignore  README.md  justfile  pyproject.toml
plans/: 01-scaffolding.md  02-os-shim-and-base.md  03-tooling-components.md  04-extras-packaging-ci.md  05-vm-integration-tests.md  06-macos-vm-integration.md  07-drop-fedora-debian-parity.md  08-quiet-setup.md  09-debian-docker-support.md  10-pi-integration.md  11-pi-sandboxing.md  12-debian-bootstrap-hardening.md  13-vm-sudo-provisioning.md
src/dotgen/: __main__.py  bash.py  cli.py  component.py  environment.py  fragment.py  registry.py  render.py  secrets.py  secrets_transfer.py  shim.py  starship_config.py  types.py  vm.py
src/dotgen/components/: __init__.py  aws.py  bash_base.py  claude_code.py  core_utils.py  dotfiles_deploy.py  fonts.py  gcloud.py  gh.py  ghostty.py  git_setup.py  git_signing.py  github_ssh.py  go_lang.py  helix.py  kubectl.py  node_fnm.py  pi_agent.py  postgres.py  python_tools.py  rust.py  shellcheck.py  starship.py  supacode.py  zed.py  zoxide.py
src/dotgen/resources/pi_agent/: plannotator.json
tests/: test_bash_helpers.py  test_components.py  test_render_skeleton.py  test_render_snapshot.py  test_secrets_registry.py  test_secrets_transfer.py  test_setup_dispatcher.py  test_shellcheck.py  test_shim.py  test_vm.py  test_vm_integration.py
tests/golden/debian/: .bashrc  alias.sh  os_shim.sh  setup.sh
tests/golden/debian-docker/: .bashrc  alias.sh  os_shim.sh  setup.sh
tests/golden/fedora/: .bashrc  os_shim.sh  setup.sh
tests/golden/macos/: .bashrc  alias.sh  os_shim.sh  setup.sh
(+8 files in other folders)
